# flashtsne2

./: CMakeLists.txt  generate_datasets.py  main.cu  visualize.ipynb
include/: Dataset.hpp  ICommunicator.hpp  KMeansPartition.hpp  SparseP.hpp  error_utils.hpp  utils.hpp
src/: KMeansPartition.cu  NCCLCommunicator.cu  SparseP.cu
